force-app/main/default/objects/Contact_Center_Agent_Preference__c/Contact_Center_Agent_Preference__c.object-meta.xml
<CustomObject>
    <label>Contact Center Agent Preference</label>
    <nameField>
        <label>Contact Center Agent Preference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Center Agent Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>