force-app/main/default/objects/Contact_Center_Agent_Preference__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contact_Center_Agent_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>