force-app/main/default/objects/Contact_Center_Agent_Preference__c/fields/Agent_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Agent_User_Id__c</fullName>
    <externalId>true</externalId>
    <label>Agent User Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>