force-app/main/default/objects/Contact_Center_Agent_Preference__c/fields/Apply_Local_Presence__c.field-meta.xml
<CustomField>
    <fullName>Apply_Local_Presence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This fields calls from the local presence number if it set to true for that particular agent.</description>
    <label>Apply Local Presence</label>
    <type>Checkbox</type>
</CustomField>