force-app/main/default/objects/Contact_Center_Agent_Preference__c/fields/Contact_Center_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Center_Number__c</fullName>
    <label>Contact Center Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>